dev/patchDeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    namespace: monanimal-extranet-dev
  name: monanimal-extranet
spec:
  replicas: 2
  selector:
    matchLabels:
      app: monanimal-extranet
  template:
    metadata:
      labels:
        app: monanimal-extranet
    spec:
      containers:
      - name: monanimal-extranet
        image: princekomlan/jpetstore:1.0.2
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
